change some reflection calls deprecated in Java 9